# home-music

./: .gitignore  CODE_REVIEW.md  LICENSE  README.md  pyproject.toml
.workbuddy/memory/: 2025-07-02.md  2026-07-10.md  MEMORY.md
config/: convert.yaml  ncm_keys.yaml.example
docs/: 设计文档.md
scripts/: __init__.py  convert.py  ncm_decrypt.py  organize.py  requirements.txt  utils.py  watcher.py
