[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-music"
version = "0.2.0"
description = "网易云音乐 NCM 解密、格式转换与音乐库整理工具"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "wardraq"},
]
requires-python = ">=3.9"
keywords = ["ncm", "netease", "music", "decrypt", "alac", "flac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mutagen>=1.47.0",
    "pycryptodome>=3.20.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
home-music-decrypt = "scripts.ncm_decrypt:main"
home-music-organize = "scripts.organize:main"
home-music-watch = "scripts.watcher:main"
home-music-convert = "scripts.convert:main"

[project.urls]
Homepage = "https://github.com/wardraq/home-music"
Repository = "https://github.com/wardraq/home-music"
Issues = "https://github.com/wardraq/home-music/issues"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
